--- a/Demo-SpringBoot-SOA-FE/src/app/features/user-form/user-form.component.html
+++ b/Demo-SpringBoot-SOA-FE/src/app/features/user-form/user-form.component.html
@@ -22,6 +22,12 @@
       <input type="text" [(ngModel)]="user.phone" name="phone" />
     </div>
 
+    <div class="form-group" *ngIf="!isEdit">
+      <label>Mật khẩu</label>
+      <input type="password" [(ngModel)]="user.password" name="password" required />
+    </div>
+
+
     <div class="form-group">
       <label>Vai trò</label>
       <select [(ngModel)]="user.role" name="role" required>
